--- a/graphs/index.html
+++ b/graphs/index.html
@@ -43,7 +43,7 @@
         .force("charge", d3.forceManyBody().strength(-100))
     ;
 
-    d3.json("result.json", function (error, graph) {
+    d3.json("data.json", function (error, graph) {
         if (error) throw error;
 
         //add encompassing group for the zoom 
@@ -62,7 +62,7 @@
 
         var circles = node.append("circle")
             .attr("r", 5)
-            .attr("fill", "red")
+            .attr("fill", function (d) { return d.color; })
             .call(d3.drag()
                 .on("start", dragstarted)
                 .on("drag", dragged)
